--- a/front-trabalho/src/components/pages/Login.module.css
+++ b/front-trabalho/src/components/pages/Login.module.css
@@ -1,6 +1,6 @@
 .janela{
-    width: 900px;
-    height: 500px;
+    width: 975px;
+    height: 581px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -9,8 +9,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: black;
-    border-radius: 40px;
+    border-radius: 16px;
     overflow: hidden;
 }
 
@@ -21,18 +20,17 @@
     padding: 50px;
     background-color: #5D6BB7;
     padding: 50px;
-    width: 60%;
+    width: 40%;
     height: 100%;
 }
 
 .primeiraJanela p{
     color: #FFF;
     text-align: center;
-    font-family: Poppins;
+    font-family: 'Poppins';
     font-size: 42px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
     margin-bottom: 30px;
 }
 
@@ -40,7 +38,7 @@
     width: 70%;
     height: 10%;
     margin-bottom: 10px;
-    margin-left: 60px;
+    margin-left: 45px;
 }
 
 .primeiraJanela button{
@@ -49,24 +47,25 @@
     font-family: 'Poppins';
     font-weight: 900;
     margin-bottom: 30px;
-    border-radius: 30px;
+    border-radius: 40px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    height: 90px;
 }
 
 .segundaJanela{
     display: flex;
     flex-direction: column;
     background: #F1F1F1;
-    width: 40%;
+    width: 60%;
     height: 100%;
     padding: 50px;
 }
 
 .segundaJanela input{
     width: 100%;
-    height: 40px;
-    margin-top: 10px;
+    height: 55px;
     padding: 0 20px;
-    border-radius: 10px;
+    border-radius: 30px;
     border: 1px solid #D9D9D9;
     font-size: 20px;
     background-color: #D9D9D9;
