--- a/front-trabalho/src/components/pages/GerenciarProjeto.module.css
+++ b/front-trabalho/src/components/pages/GerenciarProjeto.module.css
@@ -7,6 +7,7 @@
     transform: translate(-50%, -50%);
     border-radius: 16px;
     overflow: hidden;
+    border: 1px solid black;
 }
 
 .navbar{
@@ -18,7 +19,6 @@
     height: 18%;
     width: 100%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    border: 1px solid black;
 }
 .navbar p{
     /*sim, isso é uma gambiarra*/
@@ -46,9 +46,10 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 200px;
-    padding-top: 150px;
+    padding-top: 100px;
+    gap: 50px;
 }
 
 .primeiraJanela1{
@@ -61,6 +62,7 @@
 .escrito{
     background-color: #5D6BB7;
     height: 100px;
+    width: 150px;
     border-radius: 0px 0px 20px 20px;
     padding-top: 10px;
 }
