--- a/front-trabalho/src/components/pages/GerenciarProjeto.module.css
+++ b/front-trabalho/src/components/pages/GerenciarProjeto.module.css
@@ -13,16 +13,12 @@
 .navbar{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: #5D6BB7;
     height: 18%;
     width: 100%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.navbar p{
-    /*sim, isso é uma gambiarra*/
-    margin-left: 43%;
 }
 
 .navbar p{
