--- a/front-trabalho/src/components/pages/RegistroProjeto.module.css
+++ b/front-trabalho/src/components/pages/RegistroProjeto.module.css
@@ -43,7 +43,7 @@
 .primeiraJanela1{
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 60%;
     gap: 30px;
     padding: 50px;
     padding-top: 90px;
@@ -52,8 +52,9 @@
 .primeiraJanela1 input{
     height: 70px;
     border-radius: 40px;
-    border: 1px solid #D9D9D9;
     font-size: 20px;
+    padding-left: 10px;
+    border: 1px solid #D9D9D9;
     background-color: #D9D9D9;
 }
 .primeiraJanela1 input::placeholder{
@@ -65,24 +66,23 @@
 .primeiraJanela1 :last-child{
     padding-bottom: 90px;
     height: 150px;
-    text-align: start; 
 }
 
 /*div com datas e botao de salvar*/
 .segundaJanela{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 40%;
     gap: 30px;
-    padding: 50px;
-    padding-top: 80px;
+    padding: 50px 50px 50px 30px;
 }
 
 .segundaJanela input{
     height: 70px;
     border-radius: 40px;
-    border: 1px solid #D9D9D9;
     font-size: 20px;
+    padding-left: 10px;
+    border: 1px solid #D9D9D9;
     background-color: #D9D9D9;
 }
 
@@ -93,6 +93,6 @@
 }
 
 .segundaJanela button{
-    border-radius: 50px;
+    border-radius: 40px;
     font-size: 30px;
 }
