:recycle: refactor: Alteração no formulario de cadastro de Projeto

--- a/front-trabalho/src/components/pages/MenuAdministrador.module.css
+++ b/front-trabalho/src/components/pages/MenuAdministrador.module.css
@@ -36,7 +36,7 @@
 }
 
 .navbar button{
-    background-color: #F1F1F1;
+    background-color: #D9D9D9;
     color: #5D6BB7;
     border-radius: 40px;
     margin-right: 10px;
