--- a/front-trabalho/src/components/pages/Projeto/RegistroAndExcluirAndDadosProjeto.module.css
+++ b/front-trabalho/src/components/pages/Projeto/RegistroAndExcluirAndDadosProjeto.module.css
@@ -32,21 +32,21 @@
     line-height: 37px;
 }
 
-.primeiraJanela{
+/*.primeiraJanela{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
-}
+}*/
 
 /*div com nome codigo e descrição*/
 .primeiraJanela1{
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    gap: 30px;
-    padding: 50px;
-    padding-top: 90px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+    padding-top: 50px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .primeiraJanela1 input{
@@ -63,36 +63,9 @@
     font-size: 25px;
 }
 
+
 .primeiraJanela1 :last-child{
-    padding-bottom: 90px;
-    height: 150px;
-}
-
-/*div com datas e botao de salvar*/
-.segundaJanela{
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    gap: 30px;
-    padding: 50px 50px 50px 30px;
-}
-
-.segundaJanela input{
-    height: 70px;
+    padding-bottom: 40px;
+    height: 50px;
     border-radius: 40px;
-    font-size: 20px;
-    padding-left: 10px;
-    border: 1px solid #D9D9D9;
-    background-color: #D9D9D9;
-}
-
-.segundaJanela input::placeholder{
-    padding-left: 20px;
-    color: #5D6BB7;
-    font-size: 25px;
-}
-
-.segundaJanela button{
-    border-radius: 40px;
-    font-size: 30px;
 }
