--- a/front-trabalho/src/components/pages/Funcionario/RegistroAndExcluirAndDadosFuncionario.module.css
+++ b/front-trabalho/src/components/pages/Funcionario/RegistroAndExcluirAndDadosFuncionario.module.css
@@ -32,14 +32,25 @@
     line-height: 37px;
 }
 
-/*div com nome codigo e descrição*/
+.primeiraJanela{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
+
+.primeiraJanela svg{
+    margin-bottom: 80px;
+}
+
 .primeiraJanela1{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 20px;
-    padding-top: 50px;
-    margin-right: 20px;
-    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 400px;
+    gap: 10px;
+    margin-top: 70px;
 }
 
 .primeiraJanela1 input{
@@ -60,5 +71,23 @@
 .primeiraJanela1 :last-child{
     padding-bottom: 40px;
     height: 50px;
+    width: 50%;
+    align-self: center;
     border-radius: 40px;
+}
+
+.primeiraJanela1 :nth-last-child(3){
+    height: 30px;
+    width: 15%;
+    align-self: flex-start;
+}
+
+.primeiraJanela1 :nth-last-child(2){
+    font-size: 20px;
+    align-self: center;
+    margin-left: -270px;
+    margin-top: -40px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    color: #5D6BB7;
 }
