--- a/front-trabalho/src/components/pages/MenuAdministrador.module.css
+++ b/front-trabalho/src/components/pages/MenuAdministrador.module.css
@@ -46,9 +46,8 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    justify-content: space-between;
-    padding: 200px;
-    padding-top: 150px;
+    justify-content: center;
+    padding-top: 110px;
 }
 
 .primeiraJanela1{
